GET, POST, PUT, DELETE Automovil

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_PORT="3313"
-HOST="localhost"
-PORT="3307"
-USER="root"
-PASSWORD=""
-DATABASE=""
+HOST="developer.tecmm.mx"
+PORT="3306"
+USER="CAG"
+PASSWORD="CAG2023B"
+DATABASE="Vehiculos"
